# RB-1-warehouse-navigation

./: .gitignore  .gitmodules  README.md
backup/: CMakeLists.txt  package.xml
backup/include/backup/: backup_server.hpp
backup/src/: backup_server.cpp  main.cpp
backup_msg/: CMakeLists.txt  package.xml
backup_msg/srv/: BackUp.srv
des_provider/: CMakeLists.txt  package.xml
des_provider/src/: main.cpp
nav2_warehouse/cartographer_slam/: CMakeLists.txt  package.xml
nav2_warehouse/cartographer_slam/config/: my_rb1.lua
nav2_warehouse/cartographer_slam/launch/: cartographer_slam.launch.py
nav2_warehouse/cartographer_slam/rviz/: mapper_config.rviz
nav2_warehouse/localization_server/: CMakeLists.txt  package.xml
nav2_warehouse/localization_server/config/: amcl_config.yaml  amcl_config_real.yaml  mapper_params_online_async.yaml  mapper_params_online_async_real.yaml
nav2_warehouse/localization_server/launch/: localization.launch.py  localization_real.launch.py  localization_sim.launch.py  slam_localization.launch.py  slam_localization_real.launch.py
nav2_warehouse/localization_server/rviz/: localization_rb1.rviz
nav2_warehouse/map_server/: CMakeLists.txt  package.xml
nav2_warehouse/map_server/config/: rb1_warehouse.pgm  rb1_warehouse.yaml  rb1_warehouse_map.data  rb1_warehouse_map.pgm  rb1_warehouse_map.yaml  real_robot_map.data  real_robot_map.pgm  real_robot_map.yaml
nav2_warehouse/path_planner_server/: CMakeLists.txt  package.xml
nav2_warehouse/path_planner_server/config/: behavior_tree.xml  behavior_tree_w_battery_checking.xml  behaviors.yaml  bt_navigator_config.yaml  controller_config.yaml  planner_config.yaml
nav2_warehouse/path_planner_server/config/real_robot/: behaviors_real.yaml  bt_navigator_config_real.yaml  collision_real.yaml  controller_config_real.yaml  (+1 more)
nav2_warehouse/path_planner_server/launch/: collision_monitor.launch.py  navigation.launch.py  navigation_real.launch.py  path_planner.launch.py  path_planner_real.launch.py  rviz.launch.py
nav2_warehouse/path_planner_server/rviz/: path_planner.rviz
rb1_autonomy/: CMakeLists.txt  package.xml
rb1_autonomy/config/: backup_parames_real.yaml  backup_params.yaml  backup_params_real.yaml  bt.xml  bt_real.xml  bt_real_project.btproj  bt_test.xml  bt_test_go_to_pose.xml  bt_test_go_to_pose_real.xml  bt_test_go_to_pose_w_shelf_detect_real.xml  bt_test_go_to_shelf_w_shelf_detect.xml  bt_test_groot2.xml  bt_test_groot2_real.xml  bt_test_home.xml  bt_test_home_real.xml  bt_test_nav_des.xml  bt_test_shelf_attach.xml  bt_test_shelf_attach_real.xml  bt_test_shelf_backup.xml  bt_test_shelf_backup_real.xml  bt_test_shelf_detach.xml  bt_test_shelf_detect.xml  bt_test_shelf_detect_real.xml  locations.yaml  locations_backup.yaml  log_bt_real.btlog  shelf_attach_params.yaml  shelf_attach_params_real.yaml  shelf_detach_params.yaml  shelf_detach_params_real.yaml  shelf_detect_params.yaml  shelf_detect_params_real.yaml
rb1_autonomy/include/rb1_autonomy/: action_node.h  autonomy.h  backup_behavior.h  navigate_to_des_behavior.h  navigation_behavior.h  navigation_pose_behavior.h  service_node.h  shelf_attach_behavior.h  shelf_detach_behavior.h  shelf_detection_behavior.h  shelf_detection_real_behavior.h
rb1_autonomy/launch/: autonomy.launch.py  autonomy_real.launch.py  shelf_servers.launch.py  shelf_servers.launch_real.py  shelf_servers_real.launch.py
rb1_autonomy/src/: autonomy.cpp  backup_behavior.cpp  main.cpp  navigate_to_des_behavior.cpp  navigation_behavior.cpp  navigation_pose_behavior.cpp  shelf_attach_behavior.cpp  shelf_detach_behavior.cpp  shelf_detection_behavior.cpp  shelf_detection_real_behavior.cpp
rb1_autonomy_msg/: CMakeLists.txt  package.xml
rb1_autonomy_msg/srv/: TickBT.srv
rb1_webapp/: index.html  main.js
shelf_attach/: CMakeLists.txt  package.xml
shelf_attach/include/shelf_attach/: shelf_attach_server.hpp
shelf_attach/src/: main.cpp  shelf_attach_server.cpp
shelf_attach_msg/: CMakeLists.txt  package.xml
shelf_attach_msg/srv/: AttachShelf.srv
shelf_detach/: CMakeLists.txt  package.xml
shelf_detach/include/shelf_detach/: shelf_detach_server.h
shelf_detach/src/: main.cpp  shelf_detach_server.cpp
shelf_detach_msg/: CMakeLists.txt  package.xml
shelf_detach_msg/srv/: DetachShelf.srv
shelf_detect/: CMakeLists.txt  package.xml
shelf_detect/include/shelf_detect/: shelf_detect_server.hpp  shelf_detect_server_real.hpp
shelf_detect/src/: main.cpp  main2.cpp  shelf_detect_server.cpp  shelf_detect_server_real.cpp
shelf_detect_msg/: CMakeLists.txt  package.xml
shelf_detect_msg/srv/: GoToShelf.srv  GoToShelfReal.srv
the_construct_office_gazebo/: CMakeLists.txt  package.xml  shelf_pose.txt
the_construct_office_gazebo/launch/: empty_ur3e.launch.xml  start_world.launch.py  start_world_empty.launch.py  start_world_empty_standalone.launch.py  start_world_standalone.launch.py  start_world_warehouse.launch.py  warehouse_rb1.launch.xml  warehouse_ur3e.launch.xml
the_construct_office_gazebo/models/rb2_simple_cart/: model.config  model.sdf
the_construct_office_gazebo/models/reflective_tag/: model.config  model.sdf
the_construct_office_gazebo/models/room/: model.sdf
the_construct_office_gazebo/models/room/materials/scripts/: galactic.material  ground.material  indigo.material  kinetic.material  testing.material
the_construct_office_gazebo/models/shelf_v2/meshes/: shelf_v2.dae
the_construct_office_gazebo/models/stool_v2/meshes/: stool_v2.dae
the_construct_office_gazebo/models/table/: model.sdf
the_construct_office_gazebo/models/table_v2/meshes/: table_v2.dae
the_construct_office_gazebo/models/tv_v2/meshes/: tv_v2.dae
the_construct_office_gazebo/worlds/: empty_world.world  ros2_online_workshop.world  ros2_online_workshop_v2.world  shelf.blend  shelf.blend1  shelf.stl  starbots_complete.world  stool.blend  stool.blend1  stool.dae  stool.stl  table.blend  table.blend1  table.dae  table.stl  table2.dae  tc_model_readme.txt  tv.dae
the_construct_office_gazebo/worlds/small_warehouse/: test.world
webpage_sample/: index.html  index_styled.html  manual.txt
(+5 files in other folders)
